2008-02-25  John W. Eaton  <jwe@octave.org>

	* graphics.cc (axes::properties::update_camera,
	axes::properties::update_aspectratios):
	Avoid shadow warnings from GCC.

	* graphics.h.in (base_properties::get_bounding_box):
	Avoid unused argument warning from GCC.

	* graphics.h.in (array_property::add_constraint): Arg is now const
	reference, not value.

	* graphics.h.in, graphics.cc (class row_vector_property): New class.	
	(axes::properties): xlim, ylim, zlim, clim, alim, xtick, ytick,
	ztick properties are now row_vector_property objects instead of
	array_property objects.

	* genprops.awk: Special case row_vector_property in the same way
	as array_property.

2008-02-22  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/ccolamd.cc, DLD-FUNCTIONS/colamd.cc,
	DLD-FUNCTIONS/convhulln.cc, DLD-FUNCTIONS/dmperm.cc,
	DLD-FUNCTIONS/qz.cc, DLD-FUNCTIONS/regexp.cc,
	DLD-FUNCTIONS/symbfact.cc, zfstream.h, zfstream.cc:
	Use 0 instead of NULL.

2008-02-22  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/chol.c (Fchol, Fcholinv, Fchol2iinv): Treat 
	sparse matrices. Add the "lower" and "vector" flags.
	* DLD-FUNCTIONS/inv.c (Finv): Treat sparse matrices.
	* DLD-FUNCTION/sparse.cc (static bool is_sparse (const
	octave_value&)): Remove and use arg.is_sparse_type () instead.
	(Fspcumprod, Fspcumsum, Fspprod, spsum, spsumsq, spdiag): Remove.
	* DLD-FUNCTIONS/splu.cc: Remove.
	* DLD-FUNCTIONS/lu.cc: Treat sparse matrices, Add "vector" flag.
	* DLD-FUNCTIONS/spchol.cc: Move to symbfact.cc
	* DLD-FUNCTIONS/symbfact.cc: Remove cholesky functions Fspchol,
	Fspcholinv, Fspchol2inv.
	* DLD-FUNCTIONS/luinc.cc: Modify for new sparse LU
	constructors. Ass the 'vector' flag.
	* DLD-FUNCTIONS/spparms.cc: Add the sum_tol flag.

	* Makifile.in (DLD_XSRC): Remove spchol.cc, splu.cc and add 
	symbfact.cc
	* data.cc (NATIVE_REDUCTION): Treat sparse matrices
	(DATA_REDUCTION): Ditto.
	(template <class T> static octave_value make_spdiag (const T&, 